--- a/index.html
+++ b/index.html
@@ -1,72 +1,109 @@
-<!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Mastermtg : GUII Project">
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <style>
+      body {
+        background-color: black;
+      }
+      header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        color: #fff;
+        box-sizing: border-box;
+        z-index: 100;
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+        padding: 50px 100px;
 
-    <title>Mastermtg</title>
-  </head>
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+        align-items: center;
 
-  <body>
+        transition: padding 840ms, background-color 840ms;
+      }
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/DevilishGreg/MASTERMTG">View on GitHub</a>
+      header.fold {
+        background-color: rgba(0, 0, 0, 0.4);
+        padding: 10px 100px;
+      }
 
-          <h1 id="project_title">Mastermtg</h1>
-          <h2 id="project_tagline">GUII Project</h2>
+      header img.logo {
+        height: 48px;
+        opacity: .4;
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/DevilishGreg/MASTERMTG/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/DevilishGreg/MASTERMTG/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        -webkit-filter: grayscale(100%);
+        filter: grayscale(100%);
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        transition: opacity 820ms, -webkit-filter 820ms, filter 820ms;
+      }
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+      header.fold img.logo {
+        -webkit-filter: grayscale(0%);
+        filter: grayscale(0%);
+        opacity: 1;
+      }
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+      header .menu {
+        color: #fff;
+        position: relative;
+        left: 100px;
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+        transition: left 840ms;
+      }
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+      header.fold .menu {
+        left: 0px;
+      }
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+      header .menu > li {
+        text-transform: uppercase;
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+        font-size: 1.2em;
+        font-family: 'Titillium Web', arial, helvetica, sans-serif;
+        font-weight: 100;
+        display: inline-block;
+        padding: 10px;
+        margin-right: 10px;
+        cursor: pointer;
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+        transition: background-color 240ms;
+      }
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+      header .menu > li:hover {
+        background-color: rgba(0, 0, 0, 0.3)
+      }
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+      header .menu .cta {
+        transform: scale(1, 1);
+        opacity: 0;
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Mastermtg maintained by <a href="https://github.com/DevilishGreg">DevilishGreg</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+        transition: all 420ms;
 
-    
+        margin: 0;
+      }
 
+      header.fold .menu .cta {
+        transform: scale(1, 1);
+        opacity: 1;
+
+        transition:
+          opacity 1337ms, transform 420ms,
+          box-shadow 420ms, background-color 420ms, 
+          color 420ms, border 420ms;
+      }
+    </style>
+  <head>
+  <body>  
+    <header>
+      <img class="logo" src="../images/logo.png" alt="Mastering Magic">
+      <ul class='menu'>
+        <li>Home</li>
+        <li>Cards</li>
+        <li>Decks</li>
+      </ul>
+    </header>
   </body>
 </html>
